Fix alignment of buttons for IE

--- a/desktop.blocks/button/_size/button_size_l.ie.css
+++ b/desktop.blocks/button/_size/button_size_l.ie.css
@@ -1,4 +1,6 @@
 button.button_size_l
 {
-    line-height: 26px;
+    height: 34px;
+
+    line-height: 27px;
 }
